@@ -14,6 +14,9 @@ Changes since the uhexen2-1.5.1 release:
   the software renderer, controlled by new cvar "contrans".
   Valid values for contrans are 0 (solid), 1 (transparent)
   and 2 (very transparent).
+* All platforms: Added on-screen fps counter to hexen2 (do
+  "showfps 1" from the console).  Updated existing showfps
+  code of hexenworld.
 * All platforms, input: Discard mouse/joystick motion when
   in cameramode. Discard the accumulated mouse motion when
   starting a game or when loading a saved game to prevent
